force-app/main/default/objects/ExamResultsLoad__c/ExamResultsLoad__c.object-meta.xml
<CustomObject>
    <description>PacPoint-MV090619 - Created for PVL phase 1</description>
    <label>Exam Results Load</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Exam Results Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Results Load</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>