force-app/main/default/objects/ExamResultsLoad__c/fields/DateofExam__c.field-meta.xml
<CustomField>
    <fullName>DateofExam__c</fullName>
    <description>PacPoint-MV090619 - Created for PVL phase 1</description>
    <label>Date of Exam</label>
    <type>Date</type>
</CustomField>