force-app/main/default/objects/ExamResultsLoad__c/fields/ExamType__c.field-meta.xml
<CustomField>
    <fullName>ExamType__c</fullName>
    <description>PacPoint-MV090619 - Created for PVL phase 1</description>
    <label>Exam Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>