force-app/main/default/objects/ExamResultsLoad__c/fields/PassorFail__c.field-meta.xml
<CustomField>
    <fullName>PassorFail__c</fullName>
    <description>PacPoint-MV090619 - Created for PVL phase 1</description>
    <label>Pass or Fail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>