force-app/main/default/objects/ExamResultsLoad__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>PacPoint-MV090619 - Created for PVL phase 1</description>
    <label>Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>