force-app/main/default/objects/ExamResultsLoad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>SSN__c</columns>
    <columns>Result__c</columns>
    <columns>DateofExam__c</columns>
    <columns>ExamType__c</columns>
    <columns>PassorFail__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>